--- a/src/index.css
+++ b/src/index.css
@@ -1,42 +1,64 @@
+/* -------------------------
+   Reset + global behavior
+-------------------------- */
+
 *,
 *::before,
-*::after{
+*::after {
     box-sizing: border-box;
 }
 
 @font-face {
     font-family: "gameboy";
-    src: url(/gameboy.ttf);   
+    src: url(/gameboy.ttf);
 }
 
-:root{
+:root {
     --width: 1920;
     --height: 1080;
     --font-color: #e1d8d4;
+
+    /* add scale default */
+    --scale: 1;
 }
+
+/* -------------------------
+   Page base (for website)
+-------------------------- */
 
 html,
-body{
+body {
     width: 100%;
     height: 100%;
-}
-
-body{
-    position: relative;
     margin: 0;
-    background-color: rgb(4, 63, 66);
 }
 
-#ui{
+body {
+    position: relative;
+    background-color: rgb(4, 63, 66);
+    font-family: sans-serif;
+    overflow: hidden; /* remove if website needs scrolling */
+}
+
+/* -------------------------
+   UI container (game only)
+-------------------------- */
+
+#ui {
     position: absolute;
     top: 50%;
     left: 50%;
     width: calc(var(--width) * 1px);
     height: calc(var(--height) * 1px);
-    transform: translate(-50%, -50%) scale(var(--scale, 0)); /*MOVING DIV TO CENTER*/
+
+    /* centered + scaled by ResizeObserver */
+    transform: translate(-50%, -50%) scale(var(--scale, 0));
     transform-origin: center;
+
     box-sizing: border-box;
     z-index: 10;
     user-select: none;
-    pointer-events: none;
+
+    /* CHANGE HERE: UI must be clickable */
+    pointer-events: auto;
 }
